syntax = "proto3";

package com.hugo.demo.user;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


message UserEntity {
  int64 user_id = 1;
  string name = 2;
  string phone_number = 3;
  string email = 4;
  string pin_hash = 5;
  string password_hash = 6;
  string token = 7;
  google.protobuf.Timestamp token_expiry = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}


